KEYCLOAK-10165 Adjust adapter tests for jdk7